third_party/WebKit/LayoutTests/http/tests/mime/resources/uppercase-mime-type.php
@@ -1,0 +1,14 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+<?php
+header("Content-Type: TEXT/HTML");
+?>
+<html>
+<script>
+if (window.layoutTestController)
+   layoutTestController.notifyDone();
+
+</script>
+<body>
+If this text is shown, that means the new document was successfully loaded.
+</body>
+</html>
